--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,12 +20,16 @@ services:
       retries: 5
 
   app:
-    build: .
+    build: 
+      context: .
+      dockerfile: ./backend/Dockerfile
     env_file:
       - .env
     depends_on:
       db:
         condition: service_healthy
+    ports:
+      - "8080:8080"
 
 volumes:
   postgres_data:
