--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,27 @@
-FROM rust:1.84.0
+FROM rust:1.84.0 AS base
+RUN cargo install sccache --version ^0.7
+RUN cargo install cargo-chef --version ^0.1
+ENV RUSTC_WRAPPER=sccache SCCACHE_DIR=/sccache
 
-WORKDIR /usr/src/trading_simulator_app
-COPY . .
+FROM base AS planner
+WORKDIR /app/backend
+COPY backend .
+RUN --mount=type=cache,target=$SCCACHE_DIR,sharing=locked \
+    cargo chef prepare --recipe-path recipe.json
 
-RUN cargo install --path ./backend
+FROM base AS builder
+WORKDIR /app/backend
+COPY --from=planner /app/backend/recipe.json recipe.json
+RUN --mount=type=cache,target=$SCCACHE_DIR,sharing=locked \
+    cargo chef cook --release --recipe-path recipe.json
+COPY backend .
+RUN --mount=type=cache,target=$SCCACHE_DIR,sharing=locked \
+    cargo build --release
 
-CMD ["trading_simulator_app"]
+FROM debian:bookworm-slim
+RUN apt-get update && apt-get install -y \
+    libssl3 \
+    ca-certificates \
+    && rm -rf /var/lib/apt/lists/*
+COPY --from=builder /app/backend/target/release/backend /usr/local/bin/
+CMD ["backend"]
