--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "@mantine/hooks": "^7.16.2",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.5",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
