--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -14,13 +14,11 @@ futures-util = "0.3.31"
 tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "json"] }
+sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "json", "chrono"] }
 dotenv = "0.15"
 axum = { version = "0.7", features = ["ws"] }
 tower-http = { version = "0.5", features = ["cors"] }
 futures = "0.3"
 tower = "0.4"
-tracing = "0.1"
-tracing-subscriber = "0.3"
 websocket = "0.24.0"
-regex = "1.11.1"
+chrono = { version =  "0.4.39", features = ["serde"] }
